@@ -112,7 +112,7 @@ DESCRIPTION
     still represented as integer.
 
     - different handling of inf/nan. Default now to null, optionally with
-    -DSTRINGIFY_INFNAN to "inf"/"nan". [#28, #32]
+    stringify_infnan() to "inf"/"nan". [#28, #32]
 
     - added "binary" extension, non-JSON and non JSON parsable, allows
     "\xNN" and "\NNN" sequences.
@@ -138,6 +138,8 @@ DESCRIPTION
 
     - Performance Optimizations for threaded Perls
 
+    - relaxed mode, allowing many popular extensions
+
     - additional fixes for:
 
       - [cpan #88061] AIX atof without USE_LONG_DOUBLE
@@ -149,6 +151,10 @@ DESCRIPTION
 
       - #41 overloading of booleans, use the object not the reference.
 
+      - #62 -Dusequadmath conversion and no SEGV.
+
+      - #72 parsing of values followed \0, like 1\0 does fail.
+
     - public maintenance and bugtracker
 
     - use ppport.h, sanify XS.xs comment styles, harness C coding style
@@ -156,9 +162,15 @@ DESCRIPTION
     - common::sense is optional. When available it is not used in the
     published production module, just during development and testing.
 
-    - extended testsuite
+    - extended testsuite, passes all http://seriot.ch/parsing_json.html
+    tests
 
-    - support many more options and methods from JSON::PP
+    - support many more options and methods from JSON::PP: stringify_infnan,
+    allow_unknown, allow_stringify, allow_barekey, encode_stringify,
+    allow_bignum, allow_singlequote, sort_by (partially), escape_slash,
+    convert_blessed, ...
+
+      optional decode_json(, allow_nonref) arg
 
 FUNCTIONAL INTERFACE
     The following convenience methods are provided by this module. They are
@@ -1590,6 +1602,11 @@ ENCODING/CODESET FLAG NOTES
 
     This works because "__proto__" is not valid outside of strings, so every
     occurrence of ""__proto__"\s*:" must be a string used as property name.
+
+    Unicode noncharacters between U+FFFD and U+10FFFF are decoded either to
+    the recommended U+FFFD REPLACEMENT CHARACTER (see Unicode PR #121:
+    Recommended Practice for Replacement Characters), or in the binary or
+    relaxed mode left as is, keeping the illegal noncharacters as before.
 
     If you know of other incompatibilities, please let me know.
 
